--- a/src/ui/components/Material.module.css
+++ b/src/ui/components/Material.module.css
@@ -195,6 +195,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    height: -webkit-fill-available;
 }
 
 .profile {
