--- a/src/ui/layouts/SidePannel.module.css
+++ b/src/ui/layouts/SidePannel.module.css
@@ -19,6 +19,7 @@
 .layout {
   display: flex;
   height: -webkit-fill-available;
+  overflow: auto;
   width: 100%;
 }
 
